[tool.poetry]
name = "stateforward-github-io"
version = "0.0.1"
description = "StateForward Documentation"
authors = ["leonwilly101 <leonwilly101@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "stateforward"}]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-plugin-inline-svg = "^0.1.0"

[tool.poetry.group.dev.dependencies]
mkdocstrings = "^0.23.0"
mkdocs-gen-files = "^0.5.0"
mkdocstrings-python = "^1.7.4"
mkdocs-material = "^9.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
